                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2014-05-06
 * Add a file to hold a master before_template_render hook for all of wing.  This hook should always be the last hook processed, because it will call describe on the current_user object passed in.

2014-04-2
 * Automatically set the database name in the config file, based on the project name.

2014-03-17
 * Update the template class templates for Bootstrap3

2014-02-27
 * You can now add extra_processing to the Wing::Rest's generate_delete.

2014-02-27
 * You can now make a class viewable using the PrivilegeControlled role.

2013-10-30
 * Changed session to compare the password hash stored in the session with the one stored in the database. This way all existing sessions will get logged out if the user changes their password. 

2013-09-25
 * Daemonized wingman.pl. You now need the Daemon::Control perl module. You can also add a "wingman/pid_file_path" directive to your config file if you want to control where the pid is stored. 
 * Added --watch-only as a command line flag to wingman.pl so that you can specify a tube to watch other than the default tube. This is useful when you have different servers that you wish to handle different tubes. 

2013-09-21
 * Fixed a major security hole where it was possible to create new objects in some cases when you shouldn't be able to.

2013-09-03
 * Wing::Role::Result::Field now allows you to pass a code reference into the options parameter so you can dynamically generate field options.

2013-08-12
 * Wing tenant sites now need a new configuration entry tenants/app_dir to tell Wing where to find the APP_DIR for tenants.  This allows the owner codebase to find it for doing database installs and library path handling.